# harbour-rust

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  COMPATIBILITY.md  COMPATIBILITY.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  GOVERNANCE.md  GOVERNANCE.pt-BR.md  LICENSE  NOTICE  PROVENANCE.md  PROVENANCE.pt-BR.md  README.md  README.pt-BR.md  ROADMAP.md  ROADMAP.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  SUPPORT.md  SUPPORT.pt-BR.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  compatibility-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: ci.yml  pages.yml  quality.yml  release.yml
crates/harbour-rust-ast/: Cargo.toml
crates/harbour-rust-cli/: Cargo.toml
crates/harbour-rust-cli/src/: lib.rs  main.rs
crates/harbour-rust-cli/support/: runtime_support.c  runtime_support.h
crates/harbour-rust-cli/tests/: build.rs  commands.rs  runtime_support_strings.rs
crates/harbour-rust-codegen-c/: Cargo.toml
crates/harbour-rust-codegen-c/src/: lib.rs
crates/harbour-rust-codegen-c/tests/: emitter.rs
crates/harbour-rust-compat/: Cargo.toml
crates/harbour-rust-compat/src/: lib.rs
crates/harbour-rust-compat/tests/: lexer_baseline.rs  parser_baseline.rs  pp_phase9_rules.rs  runtime_abs.rs  runtime_abs_edges.rs  runtime_array_builtins.rs  runtime_array_comparison.rs  runtime_at.rs  runtime_at_edges.rs  runtime_empty.rs  runtime_exp.rs  runtime_int.rs  runtime_left_right.rs  runtime_left_right_edges.rs  runtime_len.rs  runtime_len_edges.rs  runtime_log.rs  runtime_max_min.rs  runtime_max_min_edges.rs  runtime_mod.rs  runtime_mod_edges.rs  runtime_phase8_dynamic.rs  runtime_replicate_edges.rs  runtime_replicate_space.rs  runtime_round.rs  runtime_sin_cos.rs  runtime_sqrt.rs  runtime_str.rs  runtime_str_edges.rs  runtime_string_compare.rs  runtime_substr.rs  runtime_substr_edges.rs  runtime_tan.rs  runtime_trim.rs  runtime_trim_edges.rs  runtime_type.rs  runtime_type_edges.rs  runtime_type_empty_edges.rs  runtime_upper_lower.rs  runtime_val.rs  (+2 more)
crates/harbour-rust-compat/tests/support/: mod.rs
crates/harbour-rust-hir/: Cargo.toml
docs/: README.md  README.pt-BR.md  architecture.md  benchmarks.md  cli.md  codegen-c.md  commit-flow.md  conventional-commits.md  diagnostics.md  dialect-clipper.md  dialect-harbour.md  grammar.md  hir.md  ir.md  lexer.md  overview.md  phase16-plan.md  phase7-plan.md  preprocessor.md  rdd.md  recipes.md  release.md  runtime.md  sema.md  test-strategy.md  upstream-navigator.md
examples/: hello.prg
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: lexer.rs  parser.rs  pp.rs
tests/: README.md
tools/: README.md
(+475 files in other folders)
