[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/arcostasi/harbour-rust"
rust-version = "1.94"
version = "0.4.0-alpha.0"

[workspace.metadata.harbour-rust]
phase = 12
status = "release-prep"
