[package]
name = "harbour-rust-codegen-c"
version = "0.4.0-alpha.0"
edition = "2024"

[dependencies]
harbour-rust-ir = { path = "../harbour-rust-ir" }
harbour-rust-lexer = { path = "../harbour-rust-lexer" }

[dev-dependencies]
harbour-rust-hir = { path = "../harbour-rust-hir" }
harbour-rust-parser = { path = "../harbour-rust-parser" }
