[package]
name = "harbour-rust-compat"
version = "0.1.0"
edition = "2024"

[dependencies]
harbour-rust-ast = { path = "../harbour-rust-ast" }
harbour-rust-lexer = { path = "../harbour-rust-lexer" }
harbour-rust-parser = { path = "../harbour-rust-parser" }

[dev-dependencies]
harbour-rust-runtime = { path = "../harbour-rust-runtime" }
